2002-09-14  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.20.4

	* parameter.c (parse_options): add notes on what is problematic about it.

	* dsh.c (main): note the plan; when show_machine_names &2 == 1,
	it should read input and duplicate the value to all other 
	processes.
	(execute_rsh_multiple): simplify code with "-n 4" to "-n4" kind of
	parameter passing.
	(do_execute_with_optional_pipe): add the hook to do things properly
	later.
	(fork_and_pipe_echoing_routine): return -1 instead of exit(EXIT_FAILURE)
	(do_execute_with_optional_pipe): changed implementation to use
	fork_and_pipe_echoing_routine.
	(do_execute_with_optional_pipe): fix typo
	(execute_rsh_multiple): pass -r option to other end when doing -nX. !!!
	It was missing from previous releases.

	* parameter.c (parse_options): change show_machine_names = 1 to
	|= 1.
	(load_configfile): change logic to do |= 1

	* dsh.c (do_execute_with_optional_pipe): unify the code path
	for pipe option, and other.

	* linkedlist.c (llexec): document functions.

	* dsh.c: some updates  to documentation

2002-09-11  Junichi Uekawa  <dancer@debian.org>

	* dsh.c: include locale.h

	* autogen.sh: call aclocal -I m4

	* configure.ac: 0.20.3

	* parameter.c (parse_options): update and mark for translation

	* Makefile.am (dsh_CFLAGS): add localedir to defines.
	(SUBDIRS): add po

	* dsh.c: include gettext.h
	(do_execute_with_optional_pipe): gettextize string.
	(main): add setlocale, bindtextdomain, textdomain.

	* Makefile.am (dsh_SOURCES): add gettext.h

	* gettext.h: add from gettext.

	* configure.ac: AM_GNU_GETTEXT([external]);
	(localedir): add localedir definition, ALL_LINGUAS definition, and 
	gettext function checking.

2002-09-11  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): New variable.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath.
	* configure.ac (AC_OUTPUT): Add po/Makefile.in,

2002-09-06  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.20.2
